# Yolo-Annotator---Project-Manacus

./: .gitignore  README.md  pyproject.toml  requirements.txt  validation.json
scripts/: annotator.py  error_detector.py  frame_curator.py  random_vid.py  train_split.py  validate_dataset.py
src/: annotator_app.py  annotator_view.py  bounding_box.py  box_downloader.py  inference.py
src/manakin_yolo_annotator/: annotator_app.py  bounding_box.py  box_downloader.py  error_detector.py  frame_curator.py  inference.py  random_vid.py  train_split.py  validate_dataset.py
